springBackend/portfolio_full.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: portfoliowebsite
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: portfoliowebsite
  name: deployment-portfoliowebsite
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: portfoliowebsite
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: portfoliowebsite
    spec:
      containers:
      - image: bryanrogersjr/springbootdemos:portfoliowebsite
        imagePullPolicy: Always
        name: springdemos
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: portfoliowebsite
  name: service-portfoliowebsite
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: portfoliowebsite
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: portfoliowebsite
  name: ingress-portfoliowebsite
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: service-portfoliowebsite
              servicePort: 80
